--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.1",
-    "electron": "^2.0.3"
+    "electron": "^2.0.3",
+    "fs": "0.0.1-security"
   }
 }
